<resources>
    <string name="app_name">Editshow</string>
    <string name="input_1">请选择你的性别：</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="input_2">请选择你的爱好：（可以多选）</string>
    <string name="swimming">游泳</string>
    <string name="singing">唱歌</string>
    <string name="dancing">跳舞</string>
    <string name="drawing">画画</string>
    <string name="submit">提交</string>
    <string name="action_settings">Settings</string>
    <string name="diji">点击获取填入的内容</string>
</resources>
